// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/page/SideMenu renders expanded menus correctly 1`] = `
<Collapse
  appear={false}
  enter={true}
  exit={true}
  in={false}
  isOpen={true}
  mountOnEnter={false}
  onEnter={[Function]}
  onEntered={[Function]}
  onEntering={[Function]}
  onExit={[Function]}
  onExited={[Function]}
  onExiting={[Function]}
  tag="div"
  timeout={350}
  unmountOnExit={false}
>
  <Transition
    appear={false}
    enter={true}
    exit={true}
    in={true}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    timeout={350}
    unmountOnExit={false}
  >
    <div
      className="collapsing"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <Nav
        key="child-nav-0"
        tag="ul"
        vertical={false}
      >
        <ul
          className="nav"
        >
          <NavItem
            className="nav-item-extend"
            tag="li"
          >
            <li
              className="nav-item-extend nav-item"
            >
              <NavLink
                activeClassName="side-nav-active"
                className="nav-link side-nav-item"
                to="/clients"
              >
                <Link
                  aria-current={null}
                  className="nav-link side-nav-item"
                  to="/clients"
                >
                  <a
                    aria-current={null}
                    className="nav-link side-nav-item"
                    href="/clients"
                    onClick={[Function]}
                  >
                    <span>
                       
                      All Clients
                       
                    </span>
                  </a>
                </Link>
              </NavLink>
            </li>
          </NavItem>
        </ul>
      </Nav>
      <Nav
        key="child-nav-1"
        tag="ul"
        vertical={false}
      >
        <ul
          className="nav"
        >
          <NavItem
            className="nav-item-extend"
            tag="li"
          >
            <li
              className="nav-item-extend nav-item"
            >
              <NavLink
                activeClassName="side-nav-active"
                className="nav-link side-nav-item"
                to="/404"
              >
                <Link
                  aria-current={null}
                  className="nav-link side-nav-item"
                  to="/404"
                >
                  <a
                    aria-current={null}
                    className="nav-link side-nav-item"
                    href="/404"
                    onClick={[Function]}
                  >
                    <span>
                       
                      Household
                       
                    </span>
                  </a>
                </Link>
              </NavLink>
            </li>
          </NavItem>
        </ul>
      </Nav>
      <Nav
        key="child-nav-2"
        tag="ul"
        vertical={false}
      >
        <ul
          className="nav"
        >
          <NavItem
            className="nav-item-extend"
            tag="li"
          >
            <li
              className="nav-item-extend nav-item"
            >
              <NavLink
                activeClassName="side-nav-active"
                className="nav-link side-nav-item"
                to="/404"
              >
                <Link
                  aria-current={null}
                  className="nav-link side-nav-item"
                  to="/404"
                >
                  <a
                    aria-current={null}
                    className="nav-link side-nav-item"
                    href="/404"
                    onClick={[Function]}
                  >
                    <span>
                       
                      ANC
                       
                    </span>
                  </a>
                </Link>
              </NavLink>
            </li>
          </NavItem>
        </ul>
      </Nav>
      <Nav
        key="child-nav-3"
        tag="ul"
        vertical={false}
      >
        <ul
          className="nav"
        >
          <NavItem
            className="nav-item-extend"
            tag="li"
          >
            <li
              className="nav-item-extend nav-item"
            >
              <NavLink
                activeClassName="side-nav-active"
                className="nav-link side-nav-item"
                to="/404"
              >
                <Link
                  aria-current={null}
                  className="nav-link side-nav-item"
                  to="/404"
                >
                  <a
                    aria-current={null}
                    className="nav-link side-nav-item"
                    href="/404"
                    onClick={[Function]}
                  >
                    <span>
                       
                      Child
                       
                    </span>
                  </a>
                </Link>
              </NavLink>
            </li>
          </NavItem>
        </ul>
      </Nav>
    </div>
  </Transition>
</Collapse>
`;

exports[`components/page/SideMenu renders expanded menus correctly 2`] = `
<Collapse
  appear={false}
  enter={true}
  exit={true}
  in={false}
  isOpen={false}
  mountOnEnter={false}
  onEnter={[Function]}
  onEntered={[Function]}
  onEntering={[Function]}
  onExit={[Function]}
  onExited={[Function]}
  onExiting={[Function]}
  tag="div"
  timeout={350}
  unmountOnExit={false}
>
  <Transition
    appear={false}
    enter={true}
    exit={true}
    in={false}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    timeout={350}
    unmountOnExit={false}
  >
    <div
      className="collapsing"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <Nav
        key="child-nav-0"
        tag="ul"
        vertical={false}
      >
        <ul
          className="nav"
        >
          <NavItem
            className="nav-item-extend"
            tag="li"
          >
            <li
              className="nav-item-extend nav-item"
            >
              <NavLink
                activeClassName="side-nav-active"
                className="nav-link side-nav-item"
                to="/clients"
              >
                <Link
                  aria-current={null}
                  className="nav-link side-nav-item"
                  to="/clients"
                >
                  <a
                    aria-current={null}
                    className="nav-link side-nav-item"
                    href="/clients"
                    onClick={[Function]}
                  >
                    <span>
                       
                      All Clients
                       
                    </span>
                  </a>
                </Link>
              </NavLink>
            </li>
          </NavItem>
        </ul>
      </Nav>
      <Nav
        key="child-nav-1"
        tag="ul"
        vertical={false}
      >
        <ul
          className="nav"
        >
          <NavItem
            className="nav-item-extend"
            tag="li"
          >
            <li
              className="nav-item-extend nav-item"
            >
              <NavLink
                activeClassName="side-nav-active"
                className="nav-link side-nav-item"
                to="/404"
              >
                <Link
                  aria-current={null}
                  className="nav-link side-nav-item"
                  to="/404"
                >
                  <a
                    aria-current={null}
                    className="nav-link side-nav-item"
                    href="/404"
                    onClick={[Function]}
                  >
                    <span>
                       
                      Household
                       
                    </span>
                  </a>
                </Link>
              </NavLink>
            </li>
          </NavItem>
        </ul>
      </Nav>
      <Nav
        key="child-nav-2"
        tag="ul"
        vertical={false}
      >
        <ul
          className="nav"
        >
          <NavItem
            className="nav-item-extend"
            tag="li"
          >
            <li
              className="nav-item-extend nav-item"
            >
              <NavLink
                activeClassName="side-nav-active"
                className="nav-link side-nav-item"
                to="/404"
              >
                <Link
                  aria-current={null}
                  className="nav-link side-nav-item"
                  to="/404"
                >
                  <a
                    aria-current={null}
                    className="nav-link side-nav-item"
                    href="/404"
                    onClick={[Function]}
                  >
                    <span>
                       
                      ANC
                       
                    </span>
                  </a>
                </Link>
              </NavLink>
            </li>
          </NavItem>
        </ul>
      </Nav>
      <Nav
        key="child-nav-3"
        tag="ul"
        vertical={false}
      >
        <ul
          className="nav"
        >
          <NavItem
            className="nav-item-extend"
            tag="li"
          >
            <li
              className="nav-item-extend nav-item"
            >
              <NavLink
                activeClassName="side-nav-active"
                className="nav-link side-nav-item"
                to="/404"
              >
                <Link
                  aria-current={null}
                  className="nav-link side-nav-item"
                  to="/404"
                >
                  <a
                    aria-current={null}
                    className="nav-link side-nav-item"
                    href="/404"
                    onClick={[Function]}
                  >
                    <span>
                       
                      Child
                       
                    </span>
                  </a>
                </Link>
              </NavLink>
            </li>
          </NavItem>
        </ul>
      </Nav>
    </div>
  </Transition>
</Collapse>
`;

exports[`components/page/SideMenu renders side menu correctly 1`] = `
<ul
  className="side-collapse-nav nav"
  onClick={[Function]}
>
  <NavItem
    tag="li"
  >
    <li
      className="nav-item"
    >
      <a
        className="nav nav-link side-nav-item"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Array [
              "far",
              "user",
            ]
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size="lg"
          spin={false}
          symbol={false}
          title=""
          transform={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-user fa-w-14 fa-lg "
            data-icon="user"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </FontAwesomeIcon>
        <span
          className="collapse-menu-title"
        >
           
          Client Records
           
        </span>
      </a>
    </li>
  </NavItem>
</ul>
`;
